fix: add HTML width and height to dice logo for layout shift reasons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,6 +324,8 @@ footer iframe {
         display: inline-block;
         margin-left: 20px;
         transform: rotate(45deg);
+        height: auto;
+        width: auto;
     }
 
     /* Navbar */
